# mnist-cnn

./: .gitignore  README.md  ROADMAP.md  justfile  main.py  pyproject.toml  wrangler.toml
docs/: ReLU.md  dropout.md  xavier.md
img/: just-data.avif  just.avif  mnist.avif
justfiles/: data.just  infer.just  lint.just  main.just  train.just  viz.just
src/: export_onnx.py
src/data/: fetch.py
src/infer/: predict.py
src/train/: model.py  train.py
src/viz/: dataset.py  predictions.py  training_history.py
visualisations/: class_distribution.avif  confusion_matrix.avif  dataset_samples.avif  pixel_heatmap.avif  prediction_examples.avif  training_analysis_dropout.avif  training_analysis_relu.avif  training_analysis_tanh.avif  training_analysis_xavier.avif  training_comparison_dropout_vs_tanh.avif  training_comparison_dropout_vs_xavier_vs_relu_vs_tanh.avif  training_comparison_relu_vs_tanh.avif  training_comparison_xavier_vs_relu_vs_tanh.avif
web/: index.html  mnist-worker.js  model.onnx
